--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,24 +1,27 @@
 <div id='header'>
+  <div class='container'>
+    <div class='row'>
+        <div class='col-md-4 shop_name'>
+          <%= link_to "The Bookstore", root_path %>
+        </div>
 
-  <div id='store_name'>
-    <%= link_to "The Bookstore", root_path %>
-  </div>
+        <div class='col-md-3 shop_links'>
+          <ul class="with_delimiter">
+            <li><%= link_to "HOME" %></li>
+            <li><%= link_to "SHOP" %></li>
+          </ul>
+        </div>
 
-  <div id='shop_links'>
-    <ul class="with_delimiter">
-      <li><%= link_to "HOME" %></li>
-      <li><%= link_to "SHOP" %></li>
-    </ul>
-  </div>
+        <div class='col-md-2 cart'>
+          <%= link_to "CART" %>
+        </div>
 
-  <div id='cart_links'>
-    <%= link_to "CART" %>
-  </div>
-
-  <div id='user_links'>
-    <ul class="with_delimiter">
-      <li> <%= link_to "Sign in" %> </li>
-      <li> <%= link_to "Sign up" %> </li>
-    </ul>
+        <div class='col-md-3'>
+          <ul class="with_delimiter user">
+            <li> <%= link_to "Sign in" %> </li>
+            <li> <%= link_to "Sign up" %> </li>
+          </ul>
+        </div>
+    </div>
   </div>
 </div>
