--- a/app/views/bestsellers/show.html.erb
+++ b/app/views/bestsellers/show.html.erb
@@ -1,12 +1,14 @@
 <div class='container bestseller'>
-  <div class='row'>
+  <div class='row vertical-align'>
     <div class='col-md-1'>
+      <%#= link_to '', '#', class: "fa fa-caret-left arrow inactive" %>
+      <%= bestseller_prev_link %>
     </div>
 
     <div class='col-md-10'>
       <div class='row'>
         <div class='col-md-12'>
-          <p> <span class='title'><%= @bestseller.title %></span>   by <%= link_to "#{authors_names(@bestseller.authors)}", author_path(1)  %>
+          <p> <span class='title'><%= @bestseller_current.title %></span> by <%= link_to "#{authors_names(@bestseller_current.authors)}", author_path(1)  %>
           </p>
         </div>
       </div>
@@ -16,12 +18,13 @@
           <%= image_tag 'default_cover.jpg' %>
         </div>
         <div class='col-md-9'>
-          <%= content_tag :p, @bestseller.description %>
+          <%= content_tag :p, @bestseller_current.description %>
         </div>
       </div>
     </div>
 
     <div class='col-md-1'>
+      <%= bestseller_next_link %>
     </div>
   </div>
 </div>
