Moved to Haml part 2

--- a/app/views/authors/show.html.haml
+++ b/app/views/authors/show.html.haml
@@ -1,6 +1,5 @@
-.conatainer.author
+.container.author
   .col-md-1
-    %p= '123'
   .col-md-10
     .row
       .col-md-12
@@ -9,4 +8,3 @@
       .col-md-12
         %p.biography= @author.biography
   .col-md-1
-    %p= '123'
