Haml missunderstanding fixes

--- a/app/views/books/show_bestseller.html.haml
+++ b/app/views/books/show_bestseller.html.haml
@@ -7,15 +7,15 @@
         .col-md-12
           %p
             %span.title= @bestseller_current.title
-            %html== by
-            %html= authors_of_book_with_links.html_safe
+            by
+            = authors_of_book_with_links.html_safe
 
       .row
         .col-md-3
-          %html= image_tag('default_cover.jpg')
+          = image_tag('default_cover.jpg')
 
         .col-md-9
-          %html= content_tag(:p, @bestseller_current.description)
+          = content_tag(:p, @bestseller_current.description)
 
     .col-md-1
-      %html= bestseller_next_link
+      = bestseller_next_link
