bestsellers_controller removed

--- a/app/views/books/index.html.haml
+++ b/app/views/books/index.html.haml
@@ -1,1 +1,19 @@
-%h2= 'books/index'
+.container.books
+  .row
+    .col-md-9.shop_title
+      Shop
+      .row
+        .col-md-3
+          = image_tag('default_cover.jpg')
+        .col-md-3
+          = image_tag('default_cover.jpg')
+        .col-md-3
+          = image_tag('default_cover.jpg')
+    .col-md-3.categories
+      SHOP BY CATEGORIES
+      .row
+      Category1
+      .row
+      Category2
+      .row
+      Category3
