--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -7,7 +7,7 @@
       .col-md-3.shop_links
         %ul.with_delimiter
           %li= link_to "HOME", root_path
-          %li= link_to "SHOP"
+          %li= link_to "SHOP", books_path
 
       .col-md-2.cart
         = link_to "CART"
