--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Books controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.books {
+  .shop_title {
+    font-size: 1.8em;
+    font-weight: bolder;
+  }
+
+  .book {
+    text-align: center;
+    padding: 0.5em 0.1em 0.5em 0.1em;
+    font-size: 0.5555555em;
+  }
+}
