--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -11,6 +11,9 @@
   .book {
     text-align: center;
     padding: 0.5em 0.1em 0.5em 0.1em;
-    font-size: 0.5555555em;
+    
+    .paginator {
+      text-align: center;
+    }
   }
 }
