#order_in_progress test added

--- a/app/views/books/_show_book.html.haml
+++ b/app/views/books/_show_book.html.haml
@@ -1,4 +1,6 @@
 .col-md-4.book
   = image_tag('default_cover.jpg')
   - book = books[ 3*row + col ]
-  %p= link_to( "#{book.title}", book_path(book))
+  .title
+    = link_to( "#{book.title}", book_path(book))
+  .price= "$#{book.price}"
