Devise configuration in progress...

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -14,5 +14,5 @@
 
       .col-md-3
         %ul.with_delimiter.user
-          %li= link_to "Sign in"
-          %li= link_to "Sign up"
+          %li= link_to "Sign in", new_user_session_path
+          %li= link_to "Sign up", new_user_registration_path
