--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render '/layouts/header' %>
-<%= yield %>
-<%= render '/layouts/footer' %>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
+
+  <%= render '/layouts/header' %>
+  <%= yield %>
+  <%= render '/layouts/footer' %>
 
 </body>
 </html>
