--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,5 +1,23 @@
 .devise {
+  margin-top: 3em;
   h2 {
     text-align: center;
+  }
+
+  input {
+    margin-top: 0.4em;
+    margin-bottom: 0.4em;
+    padding: 0.2em;
+  }
+
+  #user_remember_me {
+    margin-left: 1em;
+    margin-right: 0.5em;
+    width: 1em;
+    height: 1em;
+  }
+
+  p {
+    font-size: 0.8em;
   }
 }
