Little fixes in views

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -10,6 +10,10 @@
     padding: 0.2em;
   }
 
+  label {
+    font-weight: normal;
+  }
+
   #user_remember_me {
     margin-left: 1em;
     margin-right: 0.5em;
