--- a/app/views/books/_show_book.html.haml
+++ b/app/views/books/_show_book.html.haml
@@ -1,6 +1,6 @@
 .col-md-4.book
-  = image_tag('default_cover.jpg')
   - book = books[ 3*row + col ]
+  = link_to image_tag('default_cover.jpg'), book_path(book)
   .title
     = link_to( "#{book.title}", book_path(book))
   .price= "$#{book.price}"
