--- a/app/views/books/show_bestseller.html.haml
+++ b/app/views/books/show_bestseller.html.haml
@@ -12,7 +12,7 @@
 
       .row
         .col-md-3
-          = image_tag('default_cover.jpg')
+          = link_to image_tag('default_cover.jpg'), book_path(@bestseller_current.id)
 
         .col-md-9
           = content_tag(:p, @bestseller_current.description)
