Litle styles fixes

--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -32,6 +32,13 @@
   }
 }
 
+.categories {
+  text-align: left;
+  a {
+    text-decoration: underline;
+  }
+}
+
 .no_book {
   text-align: center;
   font-size: 1.8em;
