--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -26,9 +26,11 @@
     .title {
 
     }
-    .price {
-
-    }
+  }
+  .price {
+    margin-left: 0em;
+    font-size: 1.5em;
+    font-weight: bolder;
   }
 }
 
@@ -43,4 +45,8 @@
   text-align: center;
   font-size: 1.8em;
   font-weight: bolder;
+}
+
+.review {
+  margin-top: 2em;
 }
