--- a/app/assets/stylesheets/bestsellers.scss
+++ b/app/assets/stylesheets/bestsellers.scss
@@ -32,6 +32,10 @@
   .fa-caret-right {
     float: left;
   }
+
+  .price {
+    font-size: 1.5em;
+    font-weight: bolder;  }
 }
 
 .vertical-align {
