Little style improvement

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -25,3 +25,19 @@
     font-size: 0.8em;
   }
 }
+
+.devise_notice {
+  background-color: #EFE;
+  font-size: 1.6em;
+  color: #10FF10;
+  text-align: center;
+  font-size: 1em;
+}
+
+.devise_alert {
+  background-color: #FEE;
+  font-size: 1.6em;
+  color: #FF1010;
+  text-align: center;
+  font-size: 1em;
+}
