--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -26,8 +26,10 @@
   }
 
   .user {
-    font-size: 0.85em;
+    font-size: 0.8em;
     padding-top: 1em;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .with_delimiter {
