--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -15,7 +15,7 @@
       .col-md-3
         %ul.with_delimiter.user
           - if user_signed_in?
-            %li= link_to "Settings", '#'
+            %li= link_to "Settings", edit_user_customer_path(current_user.id)
             %li= link_to "Orders", '#'
             %li= link_to "Sign out", destroy_user_session_path, method: 'delete'
           - else
