--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,12 @@
 </head>
 <body>
   <%= render '/layouts/header' %>
-  <p class="devise_notice"><%= notice %></p>
-  <p class="devise_alert"><%= alert %></p>
+  <% if notice %>
+    <p class="alert alert-success text-center"><%= notice %></p>
+  <% end %>
+  <% if alert %>
+    <p class="alert alert-danger text-center"><%= alert %></p>
+  <% end %>
   <%= yield %>
   <%= render '/layouts/footer' %>
 
