--- a/app/views/customers/edit.html.haml
+++ b/app/views/customers/edit.html.haml
@@ -5,7 +5,7 @@
   .row
     .col-md-12
       %h4= 'Customer settings'.upcase
-      = form_for(@customer, url: user_customer_path, html: {class: 'form-inline'}) do |f|
+      = form_for(@customer, html: {class: 'form-inline'}) do |f|
         .form-group
           = f.text_field(:firstname, placeholder: 'Your firstname', class: 'form-control')
           = f.text_field(:lastname, placeholder: 'Your lastname', class: 'form-control')
@@ -14,7 +14,17 @@
     <!--Billing address-->
     .col-md-6
       %h4= 'Billing address'.upcase
-      / = form_for(@user.customer.billing_address) do |f|
+      / = form_for(@billing_address, url: user_customer_billing_address_path) do |f|
+      /   .form-group
+      /     = f.text_field(:firstname, placeholder: 'First name', class: 'form-control')
+      /     = f.text_field(:lastname, placeholder: 'Last name', class: 'form-control')
+      /     = f.text_field(:address, placeholder: 'Street address', class: 'form-control')
+      /     = f.text_field(:city, placeholder: 'City', class: 'form-control')
+      /     = f.text_field(:country, placeholder: 'Country', class: 'form-control')
+      /     = f.text_field(:zipcode, placeholder: 'Zip', class: 'form-control')
+      /     = f.text_field(:phone, placeholder: 'Phone', class: 'form-control')
+      /     = f.submit( value: 'Save', class: 'btn btn-default')
+
         
     <!--Shipping address-->
     .col-md-6
