Feature tests for Settings page (only Customer and Addresses)

--- a/app/assets/stylesheets/customer.scss
+++ b/app/assets/stylesheets/customer.scss
@@ -12,4 +12,16 @@
       padding-top: 1em;
       border-bottom: 1px solid;
   }
+
+  .field_with_errors {
+    input {
+      background-color: #FFE8E8
+    }
+  }
+
+  .form-inline {
+    .field_with_errors {
+      display: inline-block;
+    }
+  }
 }
