--- a/app/views/customers/edit.html.haml
+++ b/app/views/customers/edit.html.haml
@@ -11,24 +11,13 @@
           = f.text_field(:lastname, placeholder: 'Your lastname', class: 'form-control')
           = f.submit( class: 'btn btn-default')
   .row
-    <!--Billing address-->
     .col-md-6
       %h4= 'Billing address'.upcase
-      / = form_for(@billing_address, url: user_customer_billing_address_path) do |f|
-      /   .form-group
-      /     = f.text_field(:firstname, placeholder: 'First name', class: 'form-control')
-      /     = f.text_field(:lastname, placeholder: 'Last name', class: 'form-control')
-      /     = f.text_field(:address, placeholder: 'Street address', class: 'form-control')
-      /     = f.text_field(:city, placeholder: 'City', class: 'form-control')
-      /     = f.text_field(:country, placeholder: 'Country', class: 'form-control')
-      /     = f.text_field(:zipcode, placeholder: 'Zip', class: 'form-control')
-      /     = f.text_field(:phone, placeholder: 'Phone', class: 'form-control')
-      /     = f.submit( value: 'Save', class: 'btn btn-default')
-
+      = render 'address_form', address_type: 'billing_address'
         
-    <!--Shipping address-->
     .col-md-6
       %h4= 'Shipping address'.upcase
+      = render 'address_form', address_type: 'shipping_address'
   .row
     <!--Email-->
     .col-md-6
