--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -12,10 +12,11 @@
           = f.submit( class: 'btn btn-default')
   .row
   .row
-    <!--Email-->
     .col-md-6
-    <!--Password-->
+      %h4= 'Email'.upcase
+      = render 'email_form', user: @user
     .col-md-6
+
   .row
     <!--Remove account-->
     .col-md-12
