--- a/app/views/customers/_email_form.html.haml
+++ b/app/views/customers/_email_form.html.haml
@@ -1,4 +1,4 @@
-= form_for user, url: user_email_path do |f|
+= form_for user, url: user_email_path(user), html: { id: 'email_update' } do |f|
   .form-group
     = f.text_field(:email, placeholder: 'Your email', class: 'form-control')
   = f.submit(value: 'SAVE', class: 'btn btn-default')
