--- a/app/views/customers/new.html.haml
+++ b/app/views/customers/new.html.haml
@@ -13,10 +13,11 @@
   .row
   .row
     .col-md-6
-      %h4= 'Email'.upcase
+      %h4= 'EMAIL'.upcase
       = render 'email_form', user: @user
     .col-md-6
-
+      %h4= 'PASSWORD'.upcase
+      = render 'password_form', user: @user
   .row
     <!--Remove account-->
     .col-md-12
