--- a/app/views/books/show.html.haml
+++ b/app/views/books/show.html.haml
@@ -25,16 +25,7 @@
       %br
       .col-md-12
         %p
-          - star_all = 5
-          - star_full = (review.value * star_all)/Review::MAX_RATING
-          - star_half = ((review.value * star_all)%Review::MAX_RATING != 0) ? 1:0
-          - star_empty = star_all - star_full - star_half
-          - star_full.times do
-            %i.fa.fa-star
-          - star_half.times do
-            %i.fa.fa-star-half-o
-          - star_empty.times do
-            %i.fa.fa-star-o            
+          = display_stars(review.value)
           %span.title= review.title
           %span.date= review.updated_at.strftime("%B %d, %Y")
         %p
