--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -32,6 +32,11 @@
     font-size: 1.5em;
     font-weight: bolder;
   }
+
+  .quantity_field {
+    font-size: 0.9em;
+    width: 2.8em !important;
+  }
 }
 
 .categories {
@@ -65,4 +70,5 @@
   .fa {
     margin-bottom: 0;
   }
+
 }
